Closed Bug 999579 Opened 10 years ago Closed 10 years ago

D3D11 layers should not forget to get the current feature level

Categories

(Core :: Graphics: Layers, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

Right now all sorts of stuff will take slow paths on larger screens(not on Talos) because we don't initialize mFeatureLevel. And because of that the D3D11 layer manager always thinks 2048 is the max texture size. This patch fixes that.
Attachment #8410424 - Flags: review?(nical.bugzilla)
QA Contact: bas
Assignee: nobody → bas
QA Contact: bas
Attachment #8410424 - Flags: review?(nical.bugzilla) → review+
https://hg.mozilla.org/mozilla-central/rev/522dc31908be
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.