Bug 999579: Get the feature level in the D3D11 compositor. r=nical